[gd_scene load_steps=3 format=3 uid="uid://b0kt3tw04gmou"]

[ext_resource type="Script" uid="uid://dfrsonithgosh" path="res://demos/botones_mando.gd" id="1_oay1f"]
[ext_resource type="Script" uid="uid://dndsvat5s3007" path="res://addons/FennecTools/nodes/NodeGrouper.gd" id="2_6lx25"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oay1f")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -32.0
offset_right = 22.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="OptionButton" type="OptionButton" parent="GridContainer" groups=["player"]]
modulate = Color(0.9411765, 0.972549, 1, 1)
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "pp"
popup/item_0/id = 0
popup/item_1/text = "pp2"
popup/item_1/id = 1

[node name="CheckButton" type="CheckButton" parent="GridContainer" groups=["player"]]
layout_mode = 2
text = "listo"

[node name="Button" type="Button" parent="GridContainer" groups=["player"]]
layout_mode = 2
text = "aceptar"

[node name="Button2" type="Button" parent="GridContainer" groups=["player"]]
layout_mode = 2
text = "grupos"

[node name="TextEdit" type="TextEdit" parent="GridContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="GridContainer"]
layout_mode = 2

[node name="VSlider" type="VSlider" parent="." groups=["player"]]
custom_minimum_size = Vector2(0, 150)
layout_mode = 0
offset_left = 822.0
offset_top = 224.0
offset_right = 838.0
offset_bottom = 232.0

[node name="HSlider" type="HSlider" parent="." groups=["player"]]
custom_minimum_size = Vector2(150, 0)
layout_mode = 0
offset_left = 836.0
offset_top = 398.0
offset_right = 844.0
offset_bottom = 414.0

[node name="NodeGrouper" type="Node" parent="."]
script = ExtResource("2_6lx25")
target_group_name = "player"
backup_group_name = "noplayer"
nodes_to_manage = Array[NodePath]([NodePath("../GridContainer/TextEdit"), NodePath("../GridContainer/LineEdit")])
metadata/_custom_type_script = "uid://dndsvat5s3007"

[connection signal="pressed" from="GridContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="GridContainer/Button2" to="." method="_on_button_2_pressed"]
